.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__On_boarding_checklist__c.object
<CustomObject>
    <description>Recruitment
Documents required for on boarding.  Different record type to allow for country specific documents.</description>
    <fields>
        <fullName>xcdhcm__Applicant__c</fullName>
        <label>Application ID</label>
        <referenceTo>xcdhcm__Applicant__c</referenceTo>
        <relationshipLabel>On Boarding Checklists</relationshipLabel>
        <relationshipName>On_boarding_documnents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Applicant_name__c</fullName>
        <formula>xcdhcm__Applicant__r.xcdhcm__Applicant_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Background_check_release__c</fullName>
        <label>Background check release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Confidential_disclosure__c</fullName>
        <label>Confidential disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Consent_for_drug_sceening__c</fullName>
        <label>Consent for drug screening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Copy_of_driving_licence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of driving licence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Copy_of_passport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__I9_Form__c</fullName>
        <label>I9 form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__W4_Form__c</fullName>
        <label>W4 form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>On Boarding Checklist</label>
    <nameField>
        <displayFormat>OBD-{0000}</displayFormat>
        <label>Applicant checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On Boarding Checklists</pluralLabel>
    <recordTypes>
        <fullName>xcdhcm__On_boarding_documents</fullName>
        <active>true</active>
        <description>On boarding checklist</description>
        <label>On boarding checklist</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>